# Generalizing-over-unseen-tasks

./: .gitmodules  README.md
kinova_ws/src/data_collection/: package.xml
kinova_ws/src/data_collection/launch/: data_collection.launch
src/: README.md
src/behavior_cloning/: CMakelists.txt  package.xml
src/behavior_cloning/src/: behavior_cloning.py  dataset_prep.py  main.py  train.py  util.py
src/data_collection/: CMakeLists.txt  CMakelists.txt  package.xml
src/data_collection/launch/: data_collection.launch
src/data_collection/scripts/: data_collection.py
src/data_collection/src/: data_collection.py  main.cpp
